--- a/dududu/package.json
+++ b/dududu/package.json
@@ -7,6 +7,7 @@
     "filepond-plugin-image-preview": "^1.1.0",
     "mirrorx": "^0.2.11",
     "react": "^16.4.2",
+    "react-cookie": "^2.2.0",
     "react-dom": "^16.4.2",
     "react-dropzone": "^4.2.13",
     "react-filepond": "^2.0.8",
@@ -21,5 +22,6 @@
   "devDependencies": {
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0"
-  }
+  },
+  "proxy": "http://127.0.0.1:5000/"
 }
