--- a/dududu/.eslintrc.json
+++ b/dududu/.eslintrc.json
@@ -21,6 +21,7 @@
         ],
         
         "react/prop-types":0,
-        "no-console":0
+        "no-console":0,
+        "no-class-assign":0
     }
 }
