--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,26 +52,14 @@ http {
       # enable this if and only if you use HTTPS
       # proxy_set_header X-Forwarded-Proto https;
       proxy_set_header Host $http_host;
-      proxy_set_header Connection '';
-      proxy_http_version 1.1;
-      chunked_transfer_encoding off;
-      proxy_buffering off;
-      proxy_cache off;
-      # we don't want nginx trying to do something clever with
-      # redirects, we set the Host: header above already.
-      proxy_redirect off;
       proxy_pass http://web:9988;
     }
 
     location /minio/ {
-     proxy_http_version 1.1;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+      rewrite /minio/(.*) /$1  break;
+      proxy_set_header Host  minio:9123;
       proxy_pass http://minio:9123;
     }
 
-    
   }
 }
